<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyTasks</string>
    <string name="navigation_drawer_close" tools:keep="@string/navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Менеджер заметок</string>
    <string name="nav_header_subtitle">someaddress@somedomain.ru</string>
    <string name="nav_header_desc">Создание и хранение ваших заметок</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_notes">Заметки</string>
    <string name="menu_reminding">Напоминания</string>
    <string name="menu_archive">Архив</string>
    <string name="menu_trash">Корзина</string>

    <string name="flags">Ярлыки</string>
    <string name="menu_important">Важное</string>
    <string name="menu_new_flag">Создать ярлык</string>
    <string name="menu_current_notes">Заметка</string>
    <string name="title_hint">Заголовок</string>
    <string name="text_hint">Текст заметки</string>
    <string name="logout_menu_title">logout</string>

    <string name="logout_dialog_title">Выйти из аккаунта?</string>
    <string name="logout_dialog_message">Все ваши заметки будут сохранены. Вы сможете получить к ним доступ после авторизации.</string>
    <string name="logout_dialog_ok">Да</string>
    <string name="logout_dialog_cancel">Нет</string>
    <string name="delete_menu_title">Удалить</string>
    <string name="note_delete_message">Удалить?</string>
    <string name="note_delete_cancel">Нет</string>
    <string name="note_delete_ok">Да</string>
    <string name="change_color">Выбрать цвет</string>
    <string name="new_note">Новая заметка</string>

</resources>
