<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_reminding"
            android:icon="@drawable/ic_notifications_none_black_24dp"
            android:title="@string/menu_reminding" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_next_week_black_24dp"
            android:title="@string/menu_archive" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/menu_trash" />
    </group>

    <item android:title="@string/flags">
        <menu>
            <item
                android:id="@+id/nav_important"
                android:icon="@drawable/ic_flag_black_24dp"
                android:title="@string/menu_important" />
            <item
                android:id="@+id/nav_new_flag"
                android:icon="@drawable/ic_add_black_24dp"
                android:title="@string/menu_new_flag" />
        </menu>
    </item>

</menu>
