<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="ru.leonov.mytasks.ui.notesList.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes_list" />

    <fragment
        android:id="@+id/nav_current_note"
        android:name="ru.leonov.mytasks.ui.note.CurrentNoteFragment"
        android:label="@string/menu_current_notes"
        tools:layout="@layout/fragment_current_note" />

    <fragment
        android:id="@+id/nav_reminding"
        android:name="ru.leonov.mytasks.ui.notesList.NotesFragment"
        android:label="@string/menu_reminding"
        tools:layout="@layout/fragment_notes_list" />

    <fragment
        android:id="@+id/nav_archive"
        android:name="ru.leonov.mytasks.ui.notesList.NotesFragment"
        android:label="@string/menu_archive"
        tools:layout="@layout/fragment_notes_list" />

    <fragment
        android:id="@+id/nav_trash"
        android:name="ru.leonov.mytasks.ui.notesList.NotesFragment"
        android:label="@string/menu_trash"
        tools:layout="@layout/fragment_notes_list" />

    <fragment
        android:id="@+id/nav_important"
        android:name="ru.leonov.mytasks.ui.notesList.NotesFragment"
        android:label="@string/menu_important"
        tools:layout="@layout/fragment_notes_list" />

    <fragment
        android:id="@+id/nav_new_flag"
        android:name="ru.leonov.mytasks.ui.newflag.NewFlagFragment"
        android:label="@string/menu_new_flag"
        tools:layout="@layout/fragment_new_flag" />
</navigation>