<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_menu_title"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/palette"
        android:icon="@drawable/ic_color_lens_black_24dp"
        android:iconTint="@color/white"
        android:title="@string/change_color"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout_menu_title"
        app:showAsAction="never" />

</menu>
